# python-graphql-exploration

./: README.md  db.sqlite3  pyproject.toml
app/: schema.py  urls.py  views.py
django_config/: settings.py  urls.py
hello/: urls.py
hello/migrations/: 0001_initial.py
helloworld/: settings.py  urls.py
