[project]
name = "python-graphql-exploration"
version = "0.1.0"
description = ""
authors = [
    {name = "Dan Woodward",email = "danjonwoodward@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13,<4"
dependencies = [
    "django (>=4.0.0,<5.0.0)",
    "graphene-django (>=3.2.2,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
